--- a/css/contact.css
+++ b/css/contact.css
@@ -116,12 +116,12 @@ textarea {
   align-items: center;
   visibility: hidden;
   opacity: 0;
-  transition: 0.4s;
+  transition: 0.4s ease;
 }
 .overlay-contact.open {
   visibility: visible;
   opacity: 1;
-  transition: 0.4s;
+  transition: 0.4s ease;
 }
 
 @media screen and (max-width: 900px) {
