--- a/css/header.css
+++ b/css/header.css
@@ -1,17 +1,21 @@
 header {
   width: 100%;
   padding: 12px 0;
+  position: fixed;
   background-color: #19849B;
-  /* position: fixed; */
+
+  display: flex;
+  justify-content: center;
+
+  z-index: 4;
 }
 
-.header-inner {
+/* .header-inner {
   width: 100%;
   text-align: center;
-}
+} */
 
-.header-inner > a {
-  font-style: normal;
+header > a {
   font-weight: 700;
   font-size: 30px;
   line-height: 34px;
