--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -40,16 +40,32 @@
   transition: 0.4s;
 }
 
-.overlay-on-image {
-  background-color: rgba(25, 132, 155, 0.5);  
+.child {
   width: 100%;
-  height: 100%;
+  height: 100%; 
+  position: absolute;
+
+  background-color: rgba(25, 132, 155, 0.5);  
+
   display: flex;
   justify-content: center;
   align-items: center;
+
   visibility: hidden;
   opacity: 0;
-  position: absolute;
+  top: 0;
+  left: 0;
+  transition: 0.3s ease;
+}
+
+.child img {
+  width: 24px;
+  height: 24px;
+}
+
+.image-overlay:hover .child {
+  visibility: visible;
+  opacity: 1;
 }
 
 .modal {
@@ -75,6 +91,7 @@
   letter-spacing: 1.5px;
   text-transform: uppercase;
 }
+
 .modal img {
   width: 100%;
   height: 100%;
@@ -82,29 +99,15 @@
   padding-bottom: 100px;
 }
 
-.magnifier {
-  width: 24px;
-  height: 24px;
-}
-
-.magnifierImg {
-  width: 100%;
-  height: 100%;
-  background-image: url('../imagse/lupa.svg');
-}
-
-.filter {
-  width: 240px;
-  height: 240px;
-  background: linear-gradient(0deg, rgba(25, 132, 155, 0.5), rgba(25, 132, 155, 0.5));
-  position: relative;
-  display: none;
-
-}
 
 @media screen and (max-width: 1000px) {
   .image-overlay img {
     height: 180px;
+  }
+
+  .child img {
+    width: 24px;
+    height: 24px;
   }
 }
 
@@ -123,5 +126,14 @@
 
   .image-overlay:nth-of-type(even) {
     margin-right: 0;
+  }
+
+  .image-overlay:nth-of-type(4n) {
+    margin-right: 0;
+  }
+
+  .child img {
+    width: 24px;
+    height: 24px;
   }
 }
