--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@
   margin: 0 auto;
 }
 
+body {
+  position: relative;
+}
+
 @media screen and (max-width: 1000px) {
   .container {
     padding: 0 68px;
